--- a/src/main/webapp/assets/styles/base/pages/video.less
+++ b/src/main/webapp/assets/styles/base/pages/video.less
@@ -1,13 +1,13 @@
 // Only onthe video page do we have top padding. All other pages are flush top
 .video-page {
-    .component-group {
+    .component-group:first-of-type {
         padding-top: @space-double;
     }
 }
 
 @media @mq-sm {
     .video-page {
-        .component-group {
+        .component-group:first-of-type {
             padding-top: @space-quad;
         }
     }
@@ -15,8 +15,9 @@
 
 @media @mq-lg {
     .video-page {
-        .component-group {
+        .component-group:first-of-type {
             padding-top: 8rem; // custom value just for this
+            padding-bottom: @space-quad;
         }
     }
 }
